--- a/src/qt/forms/rpcconsole.ui
+++ b/src/qt/forms/rpcconsole.ui
@@ -7,11 +7,11 @@
     <x>0</x>
     <y>0</y>
     <width>740</width>
-    <height>539</height>
+    <height>450</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Flappycoin - Debug window</string>
+   <string>FlappyCoin - Debug window</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_2">
    <item>
@@ -36,7 +36,7 @@
           </font>
          </property>
          <property name="text">
-          <string>Litecoin Core</string>
+          <string>FlappyCoin Core</string>
          </property>
         </widget>
        </item>
@@ -322,7 +322,7 @@
        <item row="15" column="0">
         <widget class="QPushButton" name="openDebugLogfileButton">
          <property name="toolTip">
-          <string>Open the Flappycoin debug log file from the current data directory. This can take a few seconds for large log files.</string>
+          <string>Open the FlappyCoin debug log file from the current data directory. This can take a few seconds for large log files.</string>
          </property>
          <property name="text">
           <string>&amp;Open</string>
@@ -348,7 +348,7 @@
        <item row="17" column="0">
         <widget class="QPushButton" name="showCLOptionsButton">
          <property name="toolTip">
-          <string>Show the Flappycoin-Qt help message to get a list with possible Flappycoin command-line options.</string>
+          <string>Show the FlappyCoin-Qt help message to get a list with possible FlappyCoin command-line options.</string>
          </property>
          <property name="text">
           <string>&amp;Show</string>
